# Codex

./: .gitignore
.github/actions/codex/: package.json
.github/workflows/: ci.yml  codespell.yml  codex.yml  rust-ci.yml  rust-release.yml
codex-rs/: Cargo.toml
codex-rs/apply-patch/: Cargo.toml
codex-rs/apply-patch/src/: lib.rs  parser.rs
codex-rs/backend-client/: Cargo.toml
codex-rs/backend-client/src/: client.rs  lib.rs  types.rs
codex-rs/cli/: Cargo.toml
codex-rs/cli/src/: main.rs
codex-rs/cloud-tasks/: Cargo.toml
codex-rs/cloud-tasks-client/: Cargo.toml
codex-rs/cloud-tasks-client/src/: api.rs  git_apply.rs  http.rs  lib.rs  mock.rs
codex-rs/cloud-tasks/src/: app.rs  cli.rs  env_detect.rs  lib.rs  new_task.rs  scrollable_diff.rs  ui.rs
codex-rs/cloud-tasks/tests/: env_filter.rs
codex-rs/codex-backend-openapi-models/: Cargo.toml
codex-rs/codex-backend-openapi-models/src/models/: mod.rs
codex-rs/codex-telemetry/: Cargo.toml
codex-rs/codex-telemetry/src/: lib.rs
codex-rs/codex-telemetry/tests/: otel_file_export.rs
codex-rs/core/: Cargo.toml  prompt.md
codex-rs/core/src/: client.rs  codex.rs  config.rs  config_edit.rs  config_edit_tool.rs  config_profile.rs  config_types.rs  conversation_history.rs  custom_prompts.rs  error.rs  exec.rs  lib.rs  mcp_connection_manager.rs  openai_tools.rs  seatbelt_base_policy.sbpl  telemetry_init.rs
codex-rs/core/tests/: model_provider_override.rs  unexpected_status_no_retry.rs
codex-rs/core/tests/suite/: prompt_caching.rs  seatbelt.rs
codex-rs/exec/: Cargo.toml
codex-rs/exec/src/: lib.rs
codex-rs/exec/tests/fixtures/: sse_apply_patch_context_update.json
codex-rs/exec/tests/suite/: apply_patch.rs
codex-rs/execpolicy/: Cargo.toml
codex-rs/linux-sandbox/src/: lib.rs  linux_run_main.rs
codex-rs/mcp-client/src/: main.rs  mcp_client.rs
codex-rs/mcp-server/: Cargo.toml
codex-rs/mcp-server/src/: codex_message_processor.rs  codex_tool_config.rs  codex_tool_runner.rs  lib.rs  main.rs  message_processor.rs  session_storage.rs
codex-rs/mcp-server/tests/suite/: compatibility_mode.rs  config.rs  mod.rs  simple_compat_test.rs
codex-rs/protocol-ts/src/: lib.rs
codex-rs/protocol/src/: mcp_protocol.rs  protocol.rs
codex-rs/tui/: Cargo.toml
codex-rs/tui/src/: app.rs  app_backtrack.rs  backtrack_helpers.rs  chatwidget.rs  cli.rs  clipboard_paste.rs  history_cell.rs  lib.rs  pager_overlay.rs  resume_picker.rs  slash_command.rs
codex-rs/tui/src/bottom_pane/: chat_composer.rs  list_selection_view.rs  mod.rs  textarea.rs
codex-rs/tui/src/bottom_pane/snapshots/: codex_tui__bottom_pane__chat_composer__tests__backspace_after_pastes.snap  codex_tui__bottom_pane__chat_composer__tests__empty.snap  codex_tui__bottom_pane__chat_composer__tests__large.snap  codex_tui__bottom_pane__chat_composer__tests__multiple_pastes.snap  codex_tui__bottom_pane__chat_composer__tests__small.snap
codex-rs/tui/src/chatwidget/snapshots/: codex_tui__chatwidget__tests__chat_small_idle_h2.snap  codex_tui__chatwidget__tests__chatwidget_exec_and_status_layout_vt100_snapshot.snap  codex_tui__chatwidget__tests__status_widget_active.snap
codex-rs/tui/src/public_widgets/: composer_input.rs  mod.rs  text_input.rs
docs/: config.md
scripts/: release_gen.py
scripts/prompts/: release_notes_example.md
